# coco

./: .gitignore  .gitmodules  .rgignore  CLAUDE.md  CMakeLists.txt  README.md  env.sh  implementation.rst  main.cpp  stm32f411.ld  vector_table.cpp
cmake/: project_options.cmake  project_warnings.cmake  stm32f411.cmake
cmake/toolchain/: m4_gcc_toolchain.cmake  stm32f411.cmake
docs/: clock_management_spec.rst  clock_subsystem_spec.rst  conf.py  index.rst
examples/: CMakeLists.txt  board_config.hh  memory.ld  stm32f446ze.ld  stm32f446ze_example.cc  stm32f446ze_example.cpp
include/coco/: assert.hh  iterator.h  iterator.hh  string_view.h  string_view.hh  types.h  view.hh
include/coco/device/st/: stm32f4_device.h  stm32f4_device.hh
include/coco/drivers/clk/st/: stm32f4_clk.h  stm32f4_clk.hh  stm32f4_clk_types.hh  stm32f4_clk_util.h  stm32f4_clk_util.hh
include/coco/drivers/tim/st/: stm32f4_tim_util.h  stm32f4_tim_util.hh
include/coco/drivers/uart/st/: stm32f4_uart.h  stm32f4_uart.hh  stm32f4_uart_types.hh  stm32f4_uart_utils.hh
include/coco/print/: printr.hh  ring_buffer.hh
include/coco/util/: math.hh  type_displayer.hh
include/device/st/: stm32f4_device.h
include/drivers/clk/st/: stm32f4_clk.h  stm32f4_clk_types.h  stm32f4_clk_util.h
include/drivers/uart/st/: stm32f4_uart_utils.h
include/print/: ring_buffer.h
include/util/: math.h
linker/: stm32f4.ld
src/: CMakeLists.txt  assert.h  clock_conf.cpp  clock_conf.h  logger.h  main.cpp  stm32_clock.h  stm32_clock_util.h  stm32_tim_util.h  stm32_uart.h  system_conf.h  system_info.h  vector_table.cpp
src/coco/: view.h
src/core/: common.h  gpio.c  gpio.cpp  timer.c  timer.h
src/log/: log.h
src/platform/linux/: CMakeLists.txt  linux_main.cc  linux_main.cpp
src/platform/linux/print/: io_printr.cpp  io_sink.h
src/platform/stm32/: CMakeLists.txt  main.cpp  stm32_clock.cpp  stm32_main.cpp  system_types.h  vector_table.cpp
src/platform/stm32/core/: assert.h  common.h  gpio.cpp  gpio.h  main.c  main.h  stm32f411_core.h  timer.c
src/platform/stm32/f4/: CMakeLists.txt  stm32_main.cc  stm32_main.cpp  stm32_uart.h  system_conf.h  system_conf.hh  system_info.h  system_interrupts.cpp  system_types.h  vector_table.cc  vector_table.cpp
src/platform/stm32/f4/drivers/: stm32f4xx_ll_rcc.h
src/platform/stm32/f4/drivers/clk/: stm32_clock.cpp  stm32_clock.h  stm32_clock_util.h
src/platform/stm32/f4/drivers/ll/: stm32f4xx_ll_bus.h  stm32f4xx_ll_cortex.h  stm32f4xx_ll_gpio.h  stm32f4xx_ll_pwr.h  stm32f4xx_ll_rcc.h  stm32f4xx_ll_system.h  stm32f4xx_ll_tim.h  stm32f4xx_ll_usart.h
src/platform/stm32/f4/drivers/tim/: stm32_tim_util.h
src/platform/stm32/f4/drivers/uart/: stm32_uart.h  stm32_uart_types.h  stm32_uart_utils.h
src/platform/stm32/f4/linkerscript/: stm32f411.ld
src/platform/stm32/f4/mcu/: startup_stm32f411.s  stm32f411xe.h  stm32f4xx.h
src/platform/stm32/f4/print/: uart_printr.cc  uart_printr.cpp  uart_sink.h
src/platform/stm32/f4/time/: time.h  time.hh
src/platform/stm32/libc/: libc_runtime.cpp
src/platform/stm32/util/: type_traits.h
src/print/: log.h  print.h  printr.h  ring_buffer.h  sink.h
src/print/RTT/: printr_rtt.cc
src/print/uart/st/: printr_uart_stm32f4.cc
src/ros/: iterator.h  string_view.h  types.h  view.h
src/startup/: startup_stm32f4.s
src/temp_humidity_sensor/: CMakeLists.txt  temperature_humidity_sensor.cpp  temperature_humidity_sensor.h
src/util/: limits.h  math.h  type_displayer.h  type_traits.h
string/: main  main.cpp  string.h
